--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "name": "Minidlna",
-    "version": "0.4",
+    "version": "0.4.1",
     "slug": "minidlna",
     "description": "MiniDLNA",
-    "url": "https://github.com/cavaliere78/ha_minidlna",
+    "url": "https://github.com/esmann/ha_minidlna",
     "startup": "services",
     "boot": "auto",
     "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
@@ -18,6 +18,7 @@
       "/dev/net/tun"
     ],
     "host_network": true,
+    "init": false,	
     "options": {
       "media_dir": "/media;/share",
 	  "options": "-d"
